[package]
name = "file-loader-cloudrun"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cloud Run service for polling and loading JSONL files into Delta tables on GCS"
license-file.workspace = true

[[bin]]
name = "file-loader-cloudrun"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = "0.8"
deltalake = { workspace = true }
flate2 = "1.0"
futures = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

oxbow = { path = "../../crates/oxbow" }
