[package]
name = "file-loader-cloudrun"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cloud Run service for polling and loading JSONL files into Delta tables on GCS"
license-file.workspace = true

[[bin]]
name = "file-loader-cloudrun"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
axum = "0.8"
deltalake = { workspace = true }
futures = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
parquet = { version = "57.2.0", features = ["async", "object_store"] }
uuid = { version = "1", features = ["v4"] }
chrono = { workspace = true }

oxbow = { path = "../../crates/oxbow" }
flate2 = "1"

[dev-dependencies]

[[bench]]
name = "throughput"
harness = false
